monticore-generator/src/test/resources/cocos/invalid/A4102/A4102h.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4102;

grammar A4102h {

  A = "a";

  scoperule =
    b:Optional<String> max=5;

}